--- a/tst/ad-hoc-responsive-meta-created-with-javascript.html
+++ b/tst/ad-hoc-responsive-meta-created-with-javascript.html
@@ -17,7 +17,7 @@ document.head.appendChild(m);
 <button type="button" onclick="addMeta()"></button>
 <style>
 :empty:after {
- conent: attr(onclick) attr(style) attr(href);
+ content: attr(onclick) attr(style) attr(href);
 }
 </style>
 </body>
