Update and rename inline-element-as-offset-parent.html to wrapped-inline-element-as-offset-parent.html

--- a/tst/wrapped-inline-element-as-offset-parent.html
+++ b/tst/wrapped-inline-element-as-offset-parent.html
@@ -31,4 +31,4 @@ span::after {
 
 </script>
 
-<div><span>gazonk</span> <span>bar bar</span> gazonk</div>
+<div><span>gazonk</span> <span>bar bar</span></div>
