--- a/tst/wrapped-inline-element-as-offset-parent.html
+++ b/tst/wrapped-inline-element-as-offset-parent.html
@@ -1,34 +1,46 @@
 <!doctype html>
-<title>inline element as offet parent for absolute positioning</title>
+<title>inline element as offset parent for absolute positioning</title>
 <style>
-html { background: dimgray; color: snow;}
+html {
+ background: dimgray;
+ color: snow;
+ font-family: monospace, monospace;
+ font-size: 40px;
+ line-height: 3;
+ margin: 2rem;
+}
 
+span {
+ display: inline;
+ position: relative;
+ border-width: 0.5em;
+ border-style: solid;
+ border-color: blue red darkred darkblue;
+}
 
-div { font-family: monospace, monospace; width: 6em; outline: 10px solid green; font-size: 20px; }
-
-span {position: relative; outline: 1px solid red; }
+span::before,
+span::after {
+ content: '';
+ position: absolute;
+ width: 0.25em;
+ height: 0.25em;
+ border: 5px solid gold;
+}
 
 
 span::before {
- content: '';
- position: absolute;
  background-color: blue;
- width: 10px; height: 10px;
  left: 0;
  top: 0;
 }
 span::after {
- content: '';
- position: absolute;
  background-color: red;
- width: 10px; height: 10px;
  right: 0;
  bottom: 0;
 }
 
 </style>
-<script>
 
-</script>
+<span>gazonk</span>
+<span>bar<br>bar</span>
 
-<div><span>gazonk</span> <span>bar bar</span></div>
