--- a/tst/tailwind-colors-test.html
+++ b/tst/tailwind-colors-test.html
@@ -15,7 +15,7 @@ td[style*="color: white;"]::after { content: ' 🌙'}
 
 <table>
 <caption>
-Tailwind 2 Color Pallette with contrasting text color according WCAG
+Tailwind 2 Color Palette with contrasting text color according WCAG
 </caption>
 <tbody>
 <tr><th colspan="20"><code>colors.<!-- -->blueGray</code></th>
