--- a/tst/test.xhtml
+++ b/tst/test.xhtml
@@ -8,10 +8,49 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
   <title>&title;</title>
+  <style>
+	body { background-color: tan; color: brown; }
+  </style>
   </head>
   <body>
 	<h1>&title;</h1>
 	<p>&msg;</p>
 	<p>&baby;</p>
+	<math xmlns="http://www.w3.org/1998/Math/MathML">
+		<mrow>
+			<mi>x</mi>
+			<mo>=</mo>
+			<mfrac>
+				<mrow>
+				<mrow>
+					<mo>-</mo>
+					<mi>b</mi>
+				</mrow>
+				<mo>&PlusMinus;</mo>
+				<msqrt>
+					<mrow>
+					<msup>
+						<mi>b</mi>
+						<mn>2</mn>
+					</msup>
+					<mo>-</mo>
+					<mrow>
+						<mn>4</mn>
+						<mo>&InvisibleTimes;</mo>
+						<mi>a</mi>
+						<mo>&InvisibleTimes;</mo>
+						<mi>c</mi>
+					</mrow>
+					</mrow>
+				</msqrt>
+				</mrow>
+				<mrow>
+				<mn>2</mn>
+				<mo>&InvisibleTimes;</mo>
+				<mi>a</mi>
+				</mrow>
+			</mfrac>
+			</mrow>
+	</math>
   </body>
 </html>
