--- a/utils/bookmarklets/zoom-scale-whole-page.html
+++ b/utils/bookmarklets/zoom-scale-whole-page.html
@@ -1,11 +1,13 @@
+
 <!DOCTYPE HTML><html lang="en"><head><meta http-equiv="content-type" content="text/html; charset=utf-8">
 <title>🔍➕➖ Zoom Scale Whole Page (bookmarklet)</title><style type="text/css">
-body{background-color:#333;color:#ccc;max-width:40em;margin:0 auto;}
+body{background-color:#333;color:#ccc;max-width:45em;margin:0 auto; padding: 1em;}
 h1,h2,h3,em,strong,th,thead,label,dt,legend,caption{color:#fff; }
 a:link{color:#6ff}a:visited{color:#9f3}label:hover,a:hover{background-color:#000; }
 html *{font-family:"Courier New",monospace; }
 code,pre{tab-size:2;-moz-tab-size:2;background-color: #444; }
-a { background: canvas; color: buttonText; text-decoration: none; border: solid; font-family: system-ui; padding: .2em; }
+
+a[href^="javascript:"] { background: canvas; color: buttonText; text-decoration: none; border: solid; font-family: system-ui; padding: .2em; }
 </style></head><body>
 
 <p>
