--- a/tst/SVG-decimal-precision.html
+++ b/tst/SVG-decimal-precision.html
@@ -4,7 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 html {
- scrollbar-gutter: stable;
+ overflow: scroll;
 }
 textarea {
  width: 100%;
@@ -26,7 +26,6 @@ body {
  & > .outputs {
   flex-basis: 50vw;
   flex-shrink: 1;
-  resizable: both;
  }
 }
 input[type="number"] {
@@ -49,28 +48,29 @@ body:has(#in_hitbox:not(:checked)) #el_dots {
 </style>
 
 <section class="outputs">
- <div id="for_svg" style="outline: #0FF6 solid; "></div>
- <pre id="for_info" style="white-space: pre-wrap; word-break: break-word;"></pre>
+
+<div id="for_svg" style="outline: #0FF6 solid; "></div>
+<pre id="for_info" style="white-space: pre-wrap; word-break: break-word;"></pre>
+
 </section>
-
 <section class="inputs">
- <label>
-  Dec. places
-  <input id="in_d" type="number" value="0" min="-99" max="99"
-   oninput="in_r.value=value;render()">
- </label>
- <input type="button" onclick="in_d.value--;in_d.oninput()" value="-">
- <input type="button" onclick="in_d.value++;in_d.oninput()" value="+">
- <br>
- <input id="in_r" type="range" min="-9" max="9"
-  oninput="in_d.value=value;render()">
- <br>
- <label><input id="in_hitbox" type="checkbox" checked>Show hitbox</label>
- <input id="in_paint" type="button" onclick="paint()" value="paint">
 
- <details><summary>Template (<code>${exp}</code> = '<span id="out_exp"></span>')</summary>
-  <textarea id="in_template" oninput="render()">
-<svg xmlns="http://www.w3.org/2000/svg" 
+<label>
+ Dec. places
+ <input id="in_d" type="number" value="0" min="-99" max="99"
+  oninput="in_r.value=value;render()">
+</label>
+<input type="button" onclick="in_d.value--;in_d.oninput()" value="-">
+<input type="button" onclick="in_d.value++;in_d.oninput()" value="+">
+<br>
+<input id="in_r" type="range" min="-9" max="9"
+ oninput="in_d.value=value;render()">
+<br>
+<label><input id="in_hitbox" type="checkbox" checked>Show hitbox</label>
+<input id="in_paint" type="button" onclick="paint()" value="paint">
+<details><summary>Template (<code>${exp}</code> = '<span id="out_exp"></span>')</summary>
+ <textarea id="in_template" oninput="render()">
+<svg xmlns="http://www.w3.org/2000/svg"
  viewBox="-1${exp},-1${exp} 2${exp} 2${exp}">
  <circle r=".5${exp}"
   stroke-width="1${exp}"
@@ -78,18 +78,18 @@ body:has(#in_hitbox:not(:checked)) #el_dots {
   stroke-dasharray="1,1"
   stroke="currentcolor"
   fill="none"></circle>
- </svg>
- <style>
-  circle:hover { color: highlight; }
-  circle:active { color: mark; }
- </style>
+</svg>
+<style>
+ circle:hover { color: highlight; }
+ circle:active { color: mark; }
+</style>
 </textarea>
  
- </details>
+</details>
 
- <details open><summary>Code</summary>
-  <textarea id="for_code" oninput="for_svg.innerHTML=value"></textarea>
- </details>
+<details open><summary>Code</summary>
+ <textarea id="for_code" oninput="for_svg.innerHTML=value"></textarea>
+</details>
 
 </section>
 
@@ -162,15 +162,19 @@ function paint(){
  const size = (bb.width-1) / dotsPerLine;
  if(size < 1) size = 1;
  let buff = '';
- for( let y = bb.top; y <= bb.bottom ; y += size) {
-  for( let  x = bb.left; x <= bb.right; x += size) {
+ for ( let y = bb.top; y <= bb.bottom ; y += size ) {
+  for ( let x = bb.left; x <= bb.right; x += size ) {
    buff += makeDot(
-    {target:document.elementFromPoint(x,y),clientX:x,clientY:y},
+    {
+     target:document.elementFromPoint(x, y),
+     clientX: x,
+     clientY: y,
+    },
     size
    );
   }
  } 
- el_dots.insertAdjacentHTML('beforeend',buff); 
+ el_dots.insertAdjacentHTML('beforeend', buff); 
  dotsPerLine *= 2;
  if(dotsPerLine > (bb.width + size)/1) dotsPerLine = 10;
  in_paint.value = `raster ${dotsPerLine}^2`
