--- a/tst/SVG-decimal-precision-results.html
+++ b/tst/SVG-decimal-precision-results.html
@@ -32,7 +32,7 @@ td img { display: block; width: 100px}
 
 <dl>
 <dt>black area<dd>what is rendered
-<dt>green area<ad>approximation of where given browser "thinks" it is rendered
+<dt>green area<dd>approximation of where given browser "thinks" it is rendered
 </dl>
 
 <h2>Playground (source)</h2>
